BUG: Lack of word wrap in search results / related documents
- Created universal style rule that all divs should word-wrap.
(Sensible default... overwrite if necessary)

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -10,3 +10,5 @@ line.link {
 }
 
 span.highlight { background-color: yellow; }
+
+div {word-wrap: break-word;}
